Implemented getUser
